# OPENGL_3D_BattleZone

./: CMakeLists.txt  README.md  main.cpp
Models/Mqo/AutoTank/: t70.mqo
Models/Mqo/Tank/: bodyTank.mqo
Models/Texture/Terrain/: grass.tga  snow1.tga  trees.tga
SourceCode/: AutoBomb.cpp  AutoTank.cpp  AutoTank.h  AutoWarControl.cpp  AutoWarControl.h  Bomb.cpp  Bomb.h  BombArray.cpp  BombArray.h  Camera.cpp  Camera.h  Explosion.cpp  IncludeS.h  MqoObject.cpp  MqoObject.h  Tank.cpp  Tank.h  Terrain.cpp  Terrain.h  Texture.cpp  Texture.h  Tray.cpp  Tray.h  Tvector.cpp
Week3/: Week3.vcxproj  Week3.vcxproj.filters
Week3/Debug/: Week3.exe.recipe  Week3.ilk  vc143.idb
Week3/Debug/Week3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Week3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
war_src/: AutoWarObject.cpp  AutoWarObject.h  BombArray.h  BombTank.cpp  BombTank.h  CollisionBox.cpp  CollisionBox.h  CollisionBoxArray.cpp  CollisionBoxArray.h  CollisionSquare.cpp  CollisionSquare.h  ControlWarObject.cpp  ControlWarObject.h  Explosion.h  GLMetaseq.h
